# LandingSysBA

Gazebo_rodos_plugin/: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Gazebo_rodos_plugin/example/: CMakeLists.txt
Gazebo_rodos_plugin/example/src/: cessna.cpp  example.cpp
Gazebo_rodos_plugin/example/world/: cessna_demo.world
Gazebo_rodos_plugin/example/world/cessnaRODOS/: model.sdf
Gazebo_rodos_plugin/include/: GazeboTopic.h  rodos_plugin.h
Gazebo_rodos_plugin/logs/: .~lock.Graphs.xlsx#  1.5FarHighVel.csv  1.5FarLowVel.csv  1.5NearHighVel.csv  1.5NearLowVel.csv.csv  5.5FarHighVel.csv  5.5FarLowVel.csv  5.5NearHighVel.csv  5.5NearLowVel.csv  Graphs.xlsx
Gazebo_rodos_plugin/src/: rodos_plugin.cpp
Glider/src/: modelGliderPlugin.cpp  rodosGlider.cpp
Glider/world/: glider.world
Glider/world/glider/: model.config  model.sdf
Glider/world/glider/meshes/: Battery.dae  Elevator.dae  Fuselage.dae  HorizontalStab.dae  LeftAileron.dae  LeftWing.dae  RightAileron.dae  RightWing.dae  Rudder.dae  VerticalStab.dae
